# power-supply-driver

./: README.md  commands.py  config.py  dispatcher.py  main.py  pyproject.toml  reading_telemetry.py  setup.cfg  telemetry_logger.py  transport.py  worker.py
app/: channel_states.py  client.py  commands.py  config.py  dispatcher.py  parameter_models.py  query_body_models.py  reading_telemetry.py  telemetry_logger.py  worker.py
tests/: conftest.py  test_channel_states.py  test_turn_off_channel.py  test_turn_on_channel.py
