[tool.poetry]
name = "power-supply-driver"
version = "0.1.0"
description = ""
authors = ["alexander.evseev <evseevaleksandr89@mail.ru>"]
readme = "README.md"
packages = [{include = "power_supply_driver"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
